# ED2

./: .gitignore  CITATION.cff  ED_XYZ_D_G_localmag_corrfunc_EE.nb  ED_XYZ_D_G_localmag_corrfunc_EE_NODminmax.nb  ED_localmag_corrfunc_EE_NODminmax.nb  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.ac  mkdocs.yml  setup.sh
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
docs/: index.md  mkdocs.yml
docs/examples/: chain.md  cubic.md  cubic_sp_HB.md  examples.md  honeycomb.md  j1j2_chain.md  kagome.md  mixed_spin_chain.md  square.md  triangular.md
docs/getting-started/: installation.md  quickstart.md
docs/javascripts/: mathjax.js
docs/reference/: citation-versioning.md
docs/theory/: algorithms.md
docs/user-guide/: input-format.md  outputs.md
docs/vp/: mixed_spin_plateau.md  performance.md  symmetry_breaking_response.md  validation.md  wk_dim_scaling.md
exercises/01_elapsed_time_vs_wi_dim/: run.sh
exercises/01_elapsed_time_vs_wk_dim/: fig_01.eps  fig_01.gp  run.sh
script/: a.out  make.sh  mk_input.f90  run.sh
script_chain/: a.out  make.sh  mk_input.f90  run.sh
script_cubic/: Makefile.am  a.out  mk_input.f90  run.sh
script_cubic_sp_HB/: a.out  functions.mod  mk_input.f90  run.sh
script_honeycomb/: a.out  mk_input.f90  run.sh
script_j1j2_chain/: a.out  mk_input.f90  run.sh
script_kagome/: a.out  mk_input.f90  run.sh
script_mixed_spin_chain/: a.out  mk_input.f90  run.sh
script_square/: a.out  mk_input.f90  run.sh
script_triangular/: a.out  mk_input.f90  run.sh
source/: .#main.f90  Makefile  Makefile.am  Makefile.in  TAGS  eigen_solver.f90  get_expectation_values.f90  ham2vec.f90  input_param.f90  lanczos.f90  main.f90  state_lists.f90
tests/: Makefile.am  test_common.sh  test_ex1.sh  test_ex2.sh  test_ex3.sh  test_ex4.sh  test_ex5.sh  test_ex6.sh  test_ex7.sh  test_ex8.sh  test_ex9.sh
